--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -2,11 +2,11 @@ CC = /usr/bin/gcc
 LD = /usr/bin/ld
 INSTALL = /usr/bin/install
 INSTALLDATA = /usr/bin/install -m 644
-PLUGINS = libq3.c
-OBJS = libq3.o
-LIBS = libq3.so
-CFLAGS = -g -Wall -fPIC
-LDFLAGS = -shared
+PLUGINS = libq3.c libq2.c libh2.c
+OBJS = libq3.o libq2.o libh2.o
+LIBS = libq3.so libq2.so libh2.so
+CFLAGS = -g -Wall -fPIC -rdynamic -DDEBUG
+LDFLAGS = -shared -lm
 RM = /bin/rm -f
 RMDIR = /bin/rmdir
 
@@ -26,9 +26,11 @@ clean:
 install:
 	$(INSTALL) -m 755 -d /usr/lib/lasange/masterserver
 	$(INSTALLDATA) libq3.so /usr/lib/lasange/masterserver
+	$(INSTALLDATA) libh2.so /usr/lib/lasange/masterserver
+	$(INSTALLDATA) libq2.so /usr/lib/lasange/masterserver
 
 uninstall:
 	$(RM) /usr/lib/lasange/masterserver/libq3.so
-	$(RMDIR) /usr/lib/lasange/masterserver
-	$(RMDIR) /usr/lib/lasange
+	$(RM) /usr/lib/lasange/masterserver/libh2.so
+	$(RM) /usr/lib/lasange/masterserver/libq2.so
 
