--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -2,10 +2,10 @@ CC = /usr/bin/gcc
 LD = /usr/bin/ld
 INSTALL = /usr/bin/install
 INSTALLDATA = /usr/bin/install -m 644
-PLUGINS = libq3.c libq2c
-OBJS = libq3.o libq2.o libh2.o
-LIBS = libq3.so libq2.so libh2.so
-CFLAGS = -g -Wall -fPIC -rdynamic -DDEBUG
+PLUGINS = libq3.c libq2.c libh2.c libqw.c
+OBJS = libq3.o libq2.o libh2.o libqw.o
+LIBS = libq3.so libq2.so libh2.so libqw.so
+CFLAGS = -g -Wall -fPIC -DDEBUG
 LDFLAGS = -shared -lm
 RM = /bin/rm -f
 RMDIR = /bin/rmdir
@@ -18,7 +18,7 @@ all:	$(LIBS)
 	$(CC) $(CFLAGS) -o $@ -c $<
 
 %.so:	%.o
-	$(LD) $(LDFLAGS) -o $@ $<
+	$(CC) $(LDFLAGS) -o $@ $<
 
 clean:
 	$(RM) $(OBJS) $(LIBS)
@@ -31,4 +31,5 @@ uninstall:
 	$(RM) /usr/lib/lasange/masterserver/libq3.so
 	$(RM) /usr/lib/lasange/masterserver/libh2.so
 	$(RM) /usr/lib/lasange/masterserver/libq2.so
+	$(RM) /usr/lib/lasange/masterserver/libqw.so
 
